--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
         Top Three Groups Total: &pound;{{ '%0.2f'  % group_total }}
     </h5>
     <h5 style="text-align: center;">
-        Top Three Individuals Total: &pound;{{ '%0.2f' % single_total }}0
+        Top Three Individuals Total: &pound;{{ '%0.2f' % single_total }}
     </h5>
     <br/>
     <h6>Top Three Groups</h6>
